# tidy-tests

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  stack.yaml  tasty-discover  tidy-tests.cabal
.github/workflows/: ci.yml
app/: Main.hs
src/: TidyTests.hs
src/TidyTests/: FileUtils.hs
test/: Spec.hs
test/TidyTests/: FileUtilsSpec.hs
