cabal-version:       2.0
name:                tidy-tests
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/nedervold/tidy-tests
bug-reports:         https://github.com/nedervold/tidy-tests/issues
license:             BSD3
license-file:        LICENSE
author:              Eric Nedervold
maintainer:          nedervoldsoftware@gmail.com
copyright:           2020 Eric Nedervold
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.4.4
                   , GHC == 8.6.5

source-repository head
  type:                git
  location:            https://github.com/nedervold/tidy-tests.git

library
  hs-source-dirs:      src
  exposed-modules:     TidyTests
                     , TidyTests.FileUtils

  build-depends:       base >= 4.11.1.0 && < 4.13
                     , directory
                     , filepath

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010

executable tidy-tests
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       base >= 4.11.1.0 && < 4.13
                     , tidy-tests

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010

test-suite tidy-tests-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       base >= 4.11.1.0 && < 4.13
                     , tidy-tests
                     , directory
                     , filepath
                     , hedgehog
                     , HUnit
                     , tasty
                     , tasty-discover
                     , tasty-hedgehog
                     , tasty-hunit
                     , temporary
  other-modules:       TidyTests.FileUtilsSpec

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
